feat(api): :bento: modify trade cond switch api, add manual buy later api
add forward, reverse balance in simulate, fix trade status message
