# pkg/handlers/tradebothandler/model.go
@@ -7,6 +7,12 @@ type ManualSellBody struct {
 	Price    float64 `json:"price"`
 }
 
+// ManualBuyLaterBody ManualBuyLaterBody
+type ManualBuyLaterBody struct {
+	StockNum string  `json:"stock_num"`
+	Price    float64 `json:"price"`
+}
+
 // TargetResponse TargetResponse
 type TargetResponse struct {
 	StockNum string  `json:"stock_num"`
